# langchain-opedd

./: README.md  pyproject.toml
.github/workflows/: ci.yml
langchain_opedd/: __init__.py  document_loaders.py  tools.py
tests/: test_langchain_opedd.py
